[gd_scene load_steps=4 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" path="res://algorithms/AdvancedLaboratory/lab_equipment_simulation/LabEquipmentSimulation.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.6, 0.8, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
transparency = 1

[node name="LabEquipmentSimulation" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 12, 12)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 15, 0)
light_energy = 1.5

[node name="LabEnvironment" type="Node3D" parent="."]

[node name="Floor" type="CSGBox3D" parent="LabEnvironment"]
size = Vector3(20, 0.1, 20)
material_override = SubResource("StandardMaterial3D_1")

[node name="Walls" type="Node3D" parent="LabEnvironment"]

[node name="Wall1" type="CSGBox3D" parent="LabEnvironment/Walls"]
size = Vector3(20, 8, 0.1)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -10)
material_override = SubResource("StandardMaterial3D_1")

[node name="Wall2" type="CSGBox3D" parent="LabEnvironment/Walls"]
size = Vector3(0.1, 8, 20)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 4, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="Wall3" type="CSGBox3D" parent="LabEnvironment/Walls"]
size = Vector3(0.1, 8, 20)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 4, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="Equipment" type="Node3D" parent="."]

[node name="Microscope" type="Node3D" parent="Equipment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.5, -6)

[node name="Base" type="CSGBox3D" parent="Equipment/Microscope"]
size = Vector3(1.6, 0.2, 1.6)
material_override = SubResource("StandardMaterial3D_1")

[node name="Stand" type="CSGCylinder3D" parent="Equipment/Microscope"]
radius = 0.1
height = 2
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="Lens" type="CSGCylinder3D" parent="Equipment/Microscope"]
radius = 0.3
height = 0.4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="TestTubes" type="Node3D" parent="Equipment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.5, -6)

[node name="TestTube1" type="CSGCylinder3D" parent="Equipment/TestTubes"]
radius = 0.2
height = 1.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="TestTube2" type="CSGCylinder3D" parent="Equipment/TestTubes"]
radius = 0.2
height = 1.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.75, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="TestTube3" type="CSGCylinder3D" parent="Equipment/TestTubes"]
radius = 0.2
height = 1.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.75, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="BunsenBurner" type="Node3D" parent="Equipment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 6)

[node name="BurnerBase" type="CSGCylinder3D" parent="Equipment/BunsenBurner"]
radius = 0.4
height = 0.3
material_override = SubResource("StandardMaterial3D_1")

[node name="BurnerTube" type="CSGCylinder3D" parent="Equipment/BunsenBurner"]
radius = 0.1
height = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="Flame" type="CSGCone3D" parent="Equipment/BunsenBurner"]
radius = 0.15
height = 0.8
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="Particles" type="Node3D" parent="."]

[node name="FloatingParticles" type="Node3D" parent="Particles"]

[node name="Particle1" type="CSGSphere3D" parent="Particles/FloatingParticles"]
radius = 0.05
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, -3)
material_override = SubResource("StandardMaterial3D_2")

[node name="Particle2" type="CSGSphere3D" parent="Particles/FloatingParticles"]
radius = 0.05
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 4, -2)
material_override = SubResource("StandardMaterial3D_2")

[node name="Particle3" type="CSGSphere3D" parent="Particles/FloatingParticles"]
radius = 0.05
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 5, 2)
material_override = SubResource("StandardMaterial3D_2")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]